building graph of contributions

--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <title>Github Contributions</title>
 </head>
 <body>
+    <h1>Contributions </h1>
+    <div class="cont">
+        
+    </div>
     <script src="script.js"></script>
 </body>
 </html>
